--- a/assignment_game.vcxproj
+++ b/assignment_game.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="GamesEngineeringBase.h" />
     <ClInclude Include="map.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
